@@ -201,10 +201,14 @@ $wgContLanguageCode = $wgLanguageCode;
 # If file cache or squid cache is on, just disable this (DWIMD).
 if( $wgUseFileCache || $wgUseSquid ) $wgShowIPinHeader = false;
 
-# $wgAllowRealName was removed in 1.16 in favor of $wgHiddenPrefs,
-# handle b/c here
+# $wgAllowRealName and $wgAllowUserSkin were removed in 1.16
+# in favor of $wgHiddenPrefs, handle b/c here
 if( !$wgAllowRealName ) {
 	$wgHiddenPrefs[] = 'realname';
+}
+
+if( !$wgAllowUserSkin ) {
+	$wgHiddenPrefs[] = 'skin';
 }
 
 wfProfileOut( $fname.'-misc1' );
